# cex-exchanges

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  tracing.rs
src/clients/http/: mod.rs
src/clients/rest_api/: errors.rs  mod.rs
src/clients/ws/: config.rs  critical.rs  errors.rs  mod.rs  mutli.rs  single.rs
src/exchanges/: binance.rs  builder.rs  coinbase.rs  filter.rs  mod.rs  normalized.rs
src/exchanges/binance/: mod.rs  pairs.rs
src/exchanges/binance/rest_api/: all_symbols.rs  instruments.rs  mod.rs  response.rs  symbols.rs
src/exchanges/binance/ws/: book_ticker.rs  builder.rs  channels.rs  message.rs  mod.rs  subscription.rs  trades.rs
src/exchanges/builder/: mod.rs
src/exchanges/bybit/: mod.rs  pairs.rs
src/exchanges/bybit/rest_api/: currencies.rs  instruments.rs  mod.rs  proxy_coins.rs  response.rs  symbols.rs
src/exchanges/bybit/ws/: book_ticker.rs  builder.rs  channels.rs  message.rs  mod.rs  subscription.rs  ticker.rs  trades.rs
src/exchanges/coinbase/: mod.rs  pairs.rs
src/exchanges/coinbase/rest_api/: currencies.rs  instruments.rs  mod.rs  products.rs  response.rs
src/exchanges/coinbase/ws/: builder.rs  channels.rs  matches.rs  message.rs  mod.rs  status.rs  subscription.rs  ticker.rs
src/exchanges/kucoin/: mod.rs  pairs.rs
src/exchanges/kucoin/rest_api/: currencies.rs  instruments.rs  mod.rs  response.rs  symbols.rs
src/exchanges/kucoin/ws/: book_ticker.rs  builder.rs  channels.rs  message.rs  mod.rs  subscription.rs  ticker.rs
src/exchanges/normalized/: mod.rs
src/exchanges/normalized/rest_api/: data.rs  mod.rs  (+2 more)
src/exchanges/okex/: mod.rs  pairs.rs
src/exchanges/traits/: mod.rs  try_deserialize.rs  ws_builder.rs  ws_channel.rs  ws_subscription.rs
src/http/: errors.rs  mod.rs
src/types/: blockchain.rs  mod.rs  test_utils.rs
src/types/binance/: channels.rs  pairs.rs
src/types/coinbase/: channels.rs  mod.rs  pairs.rs
src/types/normalized/: channels.rs  currencies.rs  mod.rs  pairs.rs  quotes.rs  trades.rs  ws.rs
src/ws/: errors.rs  mod.rs  mutli.rs  sink.rs
tests/: http.rs  rest_api.rs  utils.rs  ws.rs
(+76 files in other folders)
